# bigmerge

./: Cargo.toml
.github/workflows/: test.yml
client/: Cargo.toml
client/src/: contracts.rs  error.rs  main.rs
contractmgr/: Cargo.toml
contractmgr/src/: main.rs
contractmgr/tests/: api.rs
docs/: client-keepmgr-contract-mgr.msc
franca/: Cargo.toml
franca/src/: lib.rs
keepmgr/: Cargo.toml
keepmgr/src/: main.rs
keepmgr/tests/: api.rs
koine/: Cargo.toml
koine/src/: backend.rs  contract.rs  lib.rs
