[package]
name = "client"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koine = { path = "../koine" }
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
structopt = "0.3"
ciborium = "0.1"
reqwest = "0.11"
serde = "1.0"
uuid = "0.8"
url = "2.2"
