[package]
name = "contractmgr"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franca = { path = "../franca" }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
futures-core = "0.3"
structopt = "0.3"
ciborium = "0.1"
nix = "0.19"
warp = "0.3"

[dev-dependencies]
reqwest = "0.11"
rand = "0.8"
