[package]
name = "keepmgr"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franca = { path = "../franca" }
koine = { path = "../koine" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1", features = ["full"] }
structopt = "0.3"
warp = "0.3"
